<resources>
    <string name="app_name">Password Generator</string>
    <string name="action_settings">Settings</string>
    <string name="generator">Generator</string>
    <string name="history">History</string>
    <string name="password_length">Password length</string>
    <string name="include_symbols">"Include Symbols "</string>
    <string name="include_numbers">Include Numbers</string>
    <string name="include_lowercase">Include Lowercase Characters</string>
    <string name="include_uppercase">Include Uppercase Characters</string>
    <string name="excude_similar">Exclude Similar Characters</string>
    <string name="generate_password">Generate Password</string>
    <string name="generated_password">generated-password</string>
    <string name="copy_to_clipboard">Copy to cliboard</string>


    <array name="seekbar_start_end_labels">
        <item>weak</item>
        <item>strong</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tap_to_review" >Tap to reveal</string>
</resources>
